# taxi_project

./: README.md  pyproject.toml  requirements.txt  requirements_feature_pipeline.txt
models/: lgb_model.pkl
notebooks/: 01_fetch_data.ipynb  02_validate_and_save.ipynb  03_transform_processed_data_into_ts_data.ipynb  04_transform_ts_data_into_features_and_targets.ipynb  05_transform_raw_data_into_features_and_targets.ipynb  06_visualization.ipynb  07_baseline_models.ipynb  08_xgboost_model.ipynb  09_lightgbm_model.ipynb  10_lgm_with_fe.ipynb  11_lgm_hyper.ipynb  12_load_features_hopsworks.ipynb  13_feature_pipeline.ipynb  14_model_training_pipeline.ipynb  15_predict_using_hopsworks_model.ipynb  16_inference_pipeline.ipynb  17_fetch_predictions.ipynb  19_retraining_model.ipynb
notebooks/.ipynb_checkpoints/: 01_fetch_data-checkpoint.ipynb  02_validate_and_save-checkpoint.ipynb  06_visualization-checkpoint.ipynb  07_baseline_models-checkpoint.ipynb  12_load_features_hopsworks-checkpoint.ipynb  13_feature_pipeline-checkpoint.ipynb  14_model_training_pipeline-checkpoint.ipynb  15_predict_using_hopsworks_model-checkpoint.ipynb  17_fetch_predictions-checkpoint.ipynb  19_retraining_model-checkpoint.ipynb
pipelines/: inference_pipeline.py  model_training_pipeline.py
src/: config.py  data_utils.py  feature_pipeline.py  inference.py  plot_utils.py
